# QR_code_generator

./: .gitignore  main.py  pyproject.toml
